.happypack/s--2065983545
SyntaxError: Unexpected token (90:15)

[0m [90m 88 | [39m[90m//Get individual File / example: 5661b2a2f3b30194336dc7a6[39m
 [90m 89 | [39m
[31m[1m>[22m[39m[90m 90 | [39m[36mexport[39m getFile [33m=[39m (id) [33m=>[39m {
 [90m    | [39m               [31m[1m^[22m[39m
 [90m 91 | [39m
 [90m 92 | [39m  [36mreturn[39m fetch([32m`${Const.server.amazon}/record/${id}`[39m[33m,[39m http([32m'GET'[39m))[33m.[39mthen((response) [33m=>[39m {
 [90m 93 | [39m    [36mreturn[39m response[33m.[39mjson()[0m

BabelLoaderError: SyntaxError: Unexpected token (90:15)

[0m [90m 88 | [39m[90m//Get individual File / example: 5661b2a2f3b30194336dc7a6[39m
 [90m 89 | [39m
[31m[1m>[22m[39m[90m 90 | [39m[36mexport[39m getFile [33m=[39m (id) [33m=>[39m {
 [90m    | [39m               [31m[1m^[22m[39m
 [90m 91 | [39m
 [90m 92 | [39m  [36mreturn[39m fetch([32m`${Const.server.amazon}/record/${id}`[39m[33m,[39m http([32m'GET'[39m))[33m.[39mthen((response) [33m=>[39m {
 [90m 93 | [39m    [36mreturn[39m response[33m.[39mjson()[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)